--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Hello, Pandas!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sapiente magnam maiores nostrum nemo. At quas recusandae expedita voluptatem molestiae adipisci voluptatibus libero, architecto eius repellendus optio blanditiis, non doloremque!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus sapiente magnam maiores nostrum nemo. At quas recusandae expedita voluptatem molestiae adipisci voluptatibus libero, architecto eius repellendus optio blanditiis, non doloremque!</p>
 </body>
 </html>
